# codereference

./: .gitignore  README.md  package-lock.json  package.json
backend/: .ctagsignore  .gitignore  Cargo.toml  Procfile  RustConfig  env.sh
backend/src/: content.rs  database.rs  main.rs
frontend/: .eslintcache  .gitignore  next.config.js  package-lock.json  package.json  webpack.config
frontend/components/: Carboard.js  Cards.js  Editor.js  Preview.js  Sider.js
frontend/pages/: _app.js  board.js  index.js  login.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Cards.css  Cards.tsx  Fusion.jsx  Home.tsx  Preview.css  Preview.tsx  Routes.tsx  arr.tsx  index.css  index.tsx
frontend/src/components/MediaQuery/: MediaQuery.tsx
frontend/src/components/cards/: Cards.css  Cards.tsx
frontend/src/components/login/: login.css  login.tsx
frontend/src/components/navbar/: navbar.css  navbar.jsx
frontend/src/components/preview/: Opciones.tsx  Preview.css  Preview.jsx
frontend/src/components/routes/: routes.tsx
frontend/styles/: App.module.css  Cardboard.module.css  Cards.module.css  Preview.module.css  globals.css
