[package]
name = "backend"
version = "0.1.0"
authors = ["yollotltamayo <yollotltamayo@comunidad.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = {version = "0.4.7"}
serde = {version="1.0.125", features=["derive"]}
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"]}
[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]
