[package]
name = "backend"
version = "0.1.0"
authors = ["yollotltamayo <yollotltamayo@comunidad.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }

[dependencies.mongodb]
version = "1.2.1"
default-features = false
features = ["sync"]
