
[package]
name = "backend"
version = "0.1.0"
authors = ["yollotltamayo <yollotltamayo@comunidad.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["secrets"]}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["serve"]}
serde = {version="1.0.125", features=["derive"]}
reqwest = { version = "0.11", features = ["json"] }
serde_json="1.0.59"

[dependencies.mongodb]
version = "2.0.0-alpha.1"
default-features = false
features = ["tokio-runtime"]
